--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@tanstack/react-query-devtools": "^4.29.12",
     "@types/axios": "^0.14.0",
     "axios": "^1.4.0",
+    "formik": "^2.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.11.2",
     "react-toastify": "^9.1.3",
-    "sass": "^1.62.1"
+    "sass": "^1.62.1",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
